Bug 361883 - many layer Auto scale smaller to top left size.
Summary: many layer Auto scale smaller to top left size.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Instant Preview (other bugs)
Version First Reported In: 3.0 Alpha
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 378681 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-04-17 06:44 UTC by skylerk
Modified: 2017-04-14 16:27 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
after happen (149.39 KB, image/png)
2016-04-17 07:57 UTC, skylerk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description skylerk 2016-04-17 06:44:26 UTC
the happen is I use krita alpha (sometime use "select opaque" can see the smaller selected from selected layer) after close krita and restart ,my artwork (selected layer and all bellow layer) has smaller to top left size.

Reproducible: Sometimes

Steps to Reproduce:
1.I don't know how cause happen but can use "select opaque" to see this happen.
3.

Actual Results:  
my artwork (selected layer and all bellow layer) has smaller to top left size
Comment 1 skylerk 2016-04-17 07:57:14 UTC
Created attachment 98421 [details]
after happen

after happen
Comment 2 Halla Rempt 2016-04-17 08:12:20 UTC
Hi,

Thanks for your report. I haven't seen this before.
Comment 3 skylerk 2016-04-17 08:18:44 UTC
maybe is "instant preview" problem
Comment 4 Halla Rempt 2016-04-21 09:05:25 UTC
Hi Skylerk,

Someone else has also been able to reproduce the issue. It's still very mysterious, but we're trying to figure out how to trigger it.
Comment 5 Halla Rempt 2016-04-21 09:31:18 UTC
Phabricator task: https://phabricator.kde.org/T2332
Comment 6 Dmitry Kazakov 2016-04-22 13:19:46 UTC
Git commit d5c39fbd21f3eed41a4675ed01ec5f9be38e4c57 by Dmitry Kazakov.
Committed on 22/04/2016 at 13:18.
Pushed by dkazakov into branch 'master'.

Barrier-lock the image before start saving (needs testing!)

This is a bit dangerous commit. We should test saving of the document
extensively. What should be tested:

1) Saving to KRA
2) Saving to any other formats
3) Saving while some action in still executing
4) Saving when LoD mode is active
5) Saving in batch mode

The program should not crash and/or hangup. The latter is the
most probable bug.

CC:kimageshop@kde.org
Fixes T2332

M  +4    -0    libs/ui/KisApplication.cpp
M  +62   -30   libs/ui/KisDocument.cpp
M  +1    -0    libs/ui/KisDocument.h
M  +2    -6    plugins/impex/bmp/kis_bmp_export.cpp
M  +2    -5    plugins/impex/brush/kis_brush_export.cpp
M  +0    -3    plugins/impex/csv/csv_saver.cpp
M  +0    -2    plugins/impex/csv/kis_csv_export.cpp
M  +5    -10   plugins/impex/exr/exr_export.cc
M  +4    -8    plugins/impex/heightmap/kis_heightmap_export.cpp
M  +2    -8    plugins/impex/jp2/jp2_export.cc
M  +3    -9    plugins/impex/jpeg/kis_jpeg_export.cc
M  +2    -4    plugins/impex/ora/ora_export.cc
M  +2    -5    plugins/impex/png/kis_png_export.cc
M  +3    -9    plugins/impex/ppm/kis_ppm_export.cpp
M  +0    -3    plugins/impex/psd/psd_export.cc
M  +0    -4    plugins/impex/qml/qml_export.cc
M  +0    -3    plugins/impex/spriter/kis_spriter_export.cpp
M  +2    -5    plugins/impex/tga/kis_tga_export.cpp
M  +3    -9    plugins/impex/tiff/kis_tiff_export.cc

http://commits.kde.org/krita/d5c39fbd21f3eed41a4675ed01ec5f9be38e4c57
Comment 7 Storm Engineer 2016-04-23 22:29:25 UTC
"This is a bit dangerous commit."
 - Is it safe yet or I should not do critical work with this for now?
Comment 8 Halla Rempt 2017-04-12 08:29:51 UTC
*** Bug 378681 has been marked as a duplicate of this bug. ***
Comment 9 Halla Rempt 2017-04-12 08:33:59 UTC
Note that in the duplicate report, this is reported for .kra files.
Comment 10 Dmitry Kazakov 2017-04-12 19:38:40 UTC
Git commit d71f0019e01266bd6b77638fcc37007937b40474 by Dmitry Kazakov.
Committed on 12/04/2017 at 15:20.
Pushed by dkazakov into branch 'krita/3.1'.

Add a warning dialog that the user is saving possibly corrupted image
Related: bug 378681

M  +12   -1    libs/ui/KisMainWindow.cpp
M  +6    -1    libs/ui/dialogs/kis_delayed_save_dialog.cpp
M  +7    -0    libs/ui/dialogs/kis_delayed_save_dialog.h

https://commits.kde.org/krita/d71f0019e01266bd6b77638fcc37007937b40474
Comment 11 Dmitry Kazakov 2017-04-12 19:38:40 UTC
Git commit af9a7841964830f8752e1887d9d5b79658ade4ce by Dmitry Kazakov.
Committed on 12/04/2017 at 15:20.
Pushed by dkazakov into branch 'krita/3.1'.

Lock the image while saving

It is not enough to just disable cloning of the image,
locking should also be recovered.
Related: bug 378681

M  +55   -52   libs/ui/KisDocument.cpp

https://commits.kde.org/krita/af9a7841964830f8752e1887d9d5b79658ade4ce
Comment 12 Dmitry Kazakov 2017-04-14 16:27:07 UTC
Git commit 7b7ca7efadbd17cfaf3f5cdbd6526c4ae8ec7018 by Dmitry Kazakov.
Committed on 12/04/2017 at 19:50.
Pushed by dkazakov into branch 'master'.

Add a warning dialog that the user is saving possibly corrupted image
Related: bug 378681

M  +12   -1    libs/ui/KisMainWindow.cpp
M  +6    -1    libs/ui/dialogs/kis_delayed_save_dialog.cpp
M  +7    -0    libs/ui/dialogs/kis_delayed_save_dialog.h

https://commits.kde.org/krita/7b7ca7efadbd17cfaf3f5cdbd6526c4ae8ec7018