Lock the image while saving

It is not enough to just disable cloning of the image,
locking should also be recovered.

BUG:361883
CCBUG:378681